# CMPE-131-Job-Posts

./: .replit  Dockerfile  Jenkinsfile  LICENSE  README.md  database.py  main (copy).py  main.py  pyproject.toml  replit.nix  requirements.txt  test_main (copy).py  test_main.py
templates/: 404.html  admin-module.html  application (copy).html  application (retool).html  application.html  applied-success.html  email-confirm.html  footer (old).html  footer.html  home (fetch contents from database).html  home.html  job-application-manager.html  job-apply.html  job-post-manager.html  joblist.html  jobs.html  login.html  navbar.html  signup.html
