[tool.poetry]
name = "repl_nix_CMPE-131-Job-Posts"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.3.3"
psycopg2-binary = "^2.9.7"
python-dotenv = "^1.0.0"
git-python = "^1.0.3"
pytest = "^7.4.3"
requests = "^2.31.0"
psycopg2 = "^2.9.9"
consultor = "^0.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
